<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonitoringActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_gravity="start"
        android:gravity="start"
        >

        <TextView
            android:id="@+id/eventTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/monitor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#283818" />

        <TextView
            android:id="@+id/monitoringTextView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:text="@string/show_events"
            android:singleLine="false"
            android:textSize="16sp"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:gravity="bottom"
            android:textColor="#283818"
            android:background="#c9c0cc"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/xTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/x"
            android:textSize="16sp"
            android:textColor="#283818"/>

        <EditText
            android:id="@+id/coord_xEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/enter_x"
            android:inputType="number"
            android:autofillHints="0"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/yTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/y"
            android:textSize="16sp"
            android:textColor="#283818"/>

        <EditText
            android:id="@+id/coord_yEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/enter_y"
            android:inputType="number"
            android:autofillHints="0"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/rangingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:onClick="onRangingClicked"
            android:text="@string/start"
            />

        <Button
            android:id="@+id/enableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:onClick="onEnableClicked"
            android:text="@string/disable_monitoring"
            />

    </LinearLayout>
    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/exit"
        />
</LinearLayout>
